Added support for date

--- a/v2/BUILD
+++ b/v2/BUILD
@@ -8,7 +8,7 @@ go_library(
         "decode.go",
         "encode.go",
     ],
-    importpath = "github.com/romnn/bsonpb/v2",
+    importpath = "github.com/onewealthplace/bsonpb/v2",
     visibility = ["//visibility:public"],
     deps = [
         "//v2/internal/genid:go_default_library",
@@ -32,7 +32,7 @@ go_library(
 TEST_DEPS = [
     "@com_github_google_go_cmp//cmp:go_default_library",
     "@org_golang_google_protobuf//testing/protopack:go_default_library",
-    "@com_github_romnn_deepequal//:go_default_library",
+    "@com_github_onewealthplace_deepequal//:go_default_library",
     "//internal/test_protos/v2/textpb2_proto:test_go_proto",
     "//internal/test_protos/v2/textpb3_proto:test_go_proto",
 ]
